# sweet-simple

./: .env  .env.example  .gitignore  ABOUT_PROJECT(OVERALL).txt  PROJECT_CONTEXT.md  index.html  package-lock.json  package.json  tailwind.config.ts
.lovable/: plan.md
public/: monitor.js
public/extension/: background.js  content.js  manifest.json  monitor.js  nsfw-loader.js  popup.html  popup.js  shield.css
public/os-agent/: README.md
public/os-agent/tauri-skeleton/src-tauri/: Cargo.toml
public/os-agent/tauri-skeleton/src-tauri/src/: main.rs
src/: App.tsx  index.css  main.tsx
src/components/: AnalysisCard.tsx  FeedbackWidget.tsx  Footer.tsx  GlobalProTip.tsx  ModerationDecision.tsx  NavArrows.tsx  NavHistoryControls.tsx  Navbar.tsx  NotificationBell.tsx  Particles.tsx  RequireAuth.tsx  RequireRole.tsx  SafeNetGuard.tsx
src/hooks/: useAuth.tsx
src/lib/: safenet_engine.js  safenet_full.js
src/pages/: About.tsx  AdminDashboard.tsx  Api.tsx  ApiDocs.tsx  Auth.tsx  Download.tsx  Extension.tsx  ImageAnalysis.tsx  Index.tsx  Login.tsx  NarimonAI.tsx  NarimonBrowser.tsx  Placeholder.tsx  Pricing.tsx  ResetPassword.tsx  TextAnalysis.tsx  VideoAnalysis.tsx
supabase/: config.toml
supabase/migrations/: 20260617100834_d6200b9f-6044-427d-a227-e3e766363983.sql  20260617100913_793ef823-f85f-4278-97fa-3496c291057e.sql  20260617103811_967a58ad-63af-4a7e-a6e8-bf6c3b2c53d0.sql  20260617104757_ef40c4e3-8914-4256-8c4f-333731966da0.sql  20260618124335_69a45954-8e0b-45e3-b031-ed75a9ff0b5a.sql  20260618124826_01209ea8-19a2-48d3-b476-353daebc81cb.sql  (+17 more)
(+22 files in other folders)
