[package]
name = "ai-radar"
version = "0.3.0"
edition = "2021"
description = "AI Radar — OS-level content shield"
authors = ["AI Radar"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all", "system-tray"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
screenshots = "0.8"
md-5 = "0.10"
sysinfo = "0.31"
auto-launch = "0.5"
parking_lot = "0.12"
chrono = "0.4"
urlencoding = "2"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

# Lokal NSFW (optional — feature flag bilan):
ort = { version = "2.0", features = ["download-binaries"], optional = true }
ndarray = { version = "0.16", optional = true }

[features]
default = []
local-nsfw = ["dep:ort", "dep:ndarray"]  # `cargo build --release --features local-nsfw`

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
